cabal-version: 1.12

name:           pboy
version:        1.1.0
synopsis:       a small .pdf management utility
description:    Please see the README on Github at <https://github.com/2mol/pboy#readme>
homepage:       https://github.com/2mol/pboy#readme
bug-reports:    https://github.com/2mol/pboy/issues
author:         Juri Chomé
maintainer:     juri.chome@gmail.com
copyright:      2019 Juri Chomé
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    Changelog.txt

source-repository head
  type: git
  location: https://github.com/2mol/pboy

library
  exposed-modules:
      Config
      Lib
      UI
  other-modules:
      Paths_pboy
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , brick
    , config-ini
    , containers
    , directory
    , either
    , filepath
    , microlens
    , microlens-th
    , path
    , path-io
    , pdfinfo
    , process
    , text
    , time
    , titlecase
    , unordered-containers
    , vector
    , vty
  default-language: Haskell2010

executable pboy
  main-is: Main.hs
  other-modules:
      Paths_pboy
  hs-source-dirs:
      app
  ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , pboy
  default-language: Haskell2010
